Introduce `VortexCrudForeignKeyResolutionStrategy` to encapsulate foreign key handling logic, update factory registries to use `getDataStore` method, and refactor data store implementations and dialog configurations for cleaner integration.